# count-it

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  build-win-x64-release.cmd  vcpkg.json
.github/workflows/: build.yml
include/countit/: countit.hpp  json_data.hpp  system.hpp  tap_counter.hpp  version.hpp.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt  json_data.hpp  main.cpp
src/gui/: CMakeLists.txt  base.h  main.cpp
test/: CMakeLists.txt  test_countit.cpp  test_tap_counter.cpp
